5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1684_1101.log
== TEST (2019-04-18 21:50:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "C")
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
else :
	print("Entrada: ", x, "kwh e tipo ", y)
		print("Dados invalidos")
-- ERROR:
File "XXXX", line 15
    elif (y.upper() == "C")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:50:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
else :
	print("Entrada: ", x, "kwh e tipo ", y)
		print("Dados invalidos")
-- ERROR:
File "XXXX", line 35
    print("Dados invalidos")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:50:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
else :
	print("Entrada: ", x, "kwh e tipo ", y)
	print("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:51:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", z)
else :
	print("Entrada: ", x, "kwh e tipo ", y)
	print("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:52:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entrada: ", x, "kwh e tipo ", y)
	print("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:52:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kwh e tipo ", y)
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entrada: ", x, "kwh e tipo ", y)
	print("Dados invalidos")
-- EXECUTION TIME:
0.181124
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kwh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:54:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entrada: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entrada: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entrada: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entrada: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entrada: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entrada: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entrada: ", x, "kWh e tipo ", y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.174224
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:55:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entradas: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entradas: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entradas: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entradas: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entradas: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entradas: ", x, "kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entradas: ", x, "kWh e tipo ", y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.173513
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:56:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entradas: ", x, " kWh e tipo ", y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.152244
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:56:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entradas: ", x, " kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entradas: ", x, " kWh e tipo ", y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:57:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entradas: ", x," kWh e tipo ", y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.183416
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:58:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Qual o consumo de energia em kWh: "))
y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (y.upper() == "R"):
	if x <= 500 :
		z = x * 0.44
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif (x > 500):
		z = x * 0.65
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ",round(z, 2))
elif (y.upper() == "C"):
	if x <= 1000 :
		z = x * 0.55
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 1000 :
		z = x * 0.60
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
elif (y.upper() == "I"):
	if x <= 5000 :
		z = x * 0.55
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
	elif x > 5000 :
		z = x * 0.60
		print("Entradas: ", x," kWh e tipo ", y.upper())
		print("Valor total: R$ ", round(z, 2))
else :
	print("Entradas: ", x," kWh e tipo ", y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 22:03:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if X <= 500 :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if X <= 1000 :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if X <= 5000 :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.206433
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 22:05:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if X <= 500 :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",Z)
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",Z)
elif (Y.upper() == "C"):
	if X <= 1000 :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",Z)
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",Z)
		
elif (Y.upper() == "I"):
	if X <= 5000 :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",Z)
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",Z)
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.123785
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:08:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:09:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:09:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:10:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:10:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:12:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 22:12:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.125873
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:12:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:14:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 22:14:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 22:14:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = float(input("Qual o consumo de energia em kWh: "))
Y = input("O tipo de instalacao (R para residencias, I para industrias, e C para comercios): ")
if (Y.upper() == "R"):
	if (X > 1) and (X <= 500) :
		Z = X * 0.44
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ", round(Z, 2))
	elif (X > 500):
		Z = X * 0.65
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
elif (Y.upper() == "C"):
	if (X > 1) and(X <= 1000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 1000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
elif (Y.upper() == "I"):
	if (X> 1) and (X <= 5000) :
		Z = X * 0.55
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	elif X > 5000 :
		Z = X * 0.60
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Valor total: R$ ",round(Z, 2))
	else: 
		print("Entradas: ", X, "kWh e tipo ", Y.upper())
		print("Dados invalidos")
else: 
	print("Entradas: ", X, "kWh e tipo ", Y.upper())
	print("Dados invalidos")
-- EXECUTION TIME:
0.205827
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
